add register hash to envriments